changes to header

--- a/index.html
+++ b/index.html
@@ -3,28 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./images/logo.png">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="icon" type="image/png" href="./images/logo.png" />
+    <link rel="stylesheet" href="./style/style.css" />
     <script src="./script/script.js" defer></script>
-
-  
 
     <title>Home</title>
   </head>
   <body>
     <section id="body_Container">
-      <img id="body_image" src="./assests/images/bacteria_blue_bckgrnd.jpg" alt="microscope">
+      <img
+        id="body_image"
+        src="./assests/images/bacteria_blue_bckgrnd.jpg"
+        alt="microscope"
+      />
       <div id="header_container">
-      <div id="logo_container">
-        <img id="logo_image" src="./assests/images/logo.png" alt="logo" width="180">
+        <div id="logo_container">
+          <img
+            id="logo_image"
+            src="./assests/images/logo.png"
+            alt="logo"
+            width="180"
+          />
+        </div>
+        <div id="slogan_container">
+          <h3>"In the tiniest life forms</h3>
+          <h3>lie the greatest mysteries of existence."</h3>
+        </div>
       </div>
-      <div id="slogan_container">
-        <h3>"In the tiniest life forms<br> lie the greatest mysteries of existence."</h3>
-      </div>
-      </div>
-
-
     </section>
   </body>
 </html>
- 
