changed the background image to header image

--- a/index.html
+++ b/index.html
@@ -6,17 +6,24 @@
     <link rel="icon" type="image/png" href="./images/logo.png" />
     <link rel="stylesheet" href="./style/style.css" />
     <script src="./script/script.js" defer></script>
-
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Tagesschrift&family=Tangerine:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Home</title>
   </head>
   <body>
     <section id="body_Container">
-      <img
-        id="body_image"
+
+      <div id="header_container">
+        <img
+        id="header_image"
         src="./assests/images/bacteria_blue_bckgrnd.jpg"
         alt="microscope"
       />
-      <div id="header_container">
         <div id="logo_container">
           <img
             id="logo_image"
