added line break

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <section id="body_Container">
-
+      <!--page header-->
       <div id="header_container">
         <img
         id="header_image"
@@ -28,14 +28,18 @@
           <img
             id="logo_image"
             src="./assests/images/logo.png"
-            alt="logo"
-            width="180"
+            alt="logo" width="150"
           />
         </div>
         <div id="slogan_container">
           <h3>"In the tiniest life forms</h3>
           <h3>lie the greatest mysteries of existence."</h3>
         </div>
+      </div>
+      <hr style="border: 2px solid grey; border-radius: 5px;">
+
+      <div id="main_container">
+        
       </div>
     </section>
   </body>
