--- a/index.html
+++ b/index.html
@@ -4,42 +4,63 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="./images/logo.png" />
+
+    <!-- CSS Styling -->
     <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./style/header_media.css" />
+
+    <!-- JavaScript -->
     <script src="./script/script.js" defer></script>
-    <!--Google Fonts-->
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Pacifico&family=Tagesschrift&family=Tangerine:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
     <title>Home</title>
   </head>
+
   <body>
     <section id="body_Container">
-      <!--page header-->
+      <!-- Page Header -->
       <div id="header_container">
-        <img
-        id="header_image"
-        src="./assests/images/bacteria_blue_bckgrnd.jpg"
-        alt="microscope"
-      />
-        <div id="logo_container">
-          <img
-            id="logo_image"
-            src="./assests/images/logo.png"
-            alt="logo" width="150"
-          />
-        </div>
-        <div id="slogan_container">
-          <h3>"In the tiniest life forms</h3>
-          <h3>lie the greatest mysteries of existence."</h3>
+        <video 
+        id="header_video" 
+        src="./assests/videos/virus_videos.mp4" 
+        autoplay 
+        muted 
+        loop 
+        playsinline
+      ></video>
+      
+
+
+        <div id="header_contents">
+          <div id="logo_container">
+            <img
+              id="logo_image"
+              src="./assests/images/logo.png"
+              alt="Logo"
+              width="150"
+            />
+          </div>
+
+          <div id="slogan_container">
+            <h3>In the tiniest life forms</h3>
+            <h3>lie the greatest mysteries of existence...!</h3>
+          </div>
         </div>
       </div>
-      <hr style="border: 2px solid grey; border-radius: 5px;">
 
+      <hr style="border: 2px solid grey; border-radius: 5px" />
+
+      <!-- Main Content -->
       <div id="main_container">
-        
+        <div id="aboutMe_content"></div>
+        <div id="image_container"></div>
       </div>
     </section>
   </body>
