header UI complete media query full page pending

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ne">
+  <html lang="en"></html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -35,23 +36,35 @@
         loop 
         playsinline
       ></video>
-      
-
-
         <div id="header_contents">
           <div id="logo_container">
             <img
-              id="logo_image"
               src="./assests/images/logo.png"
               alt="Logo"
-              width="150"
+              width="150" height="150"
             />
           </div>
-
+          
           <div id="slogan_container">
             <h3>In the tiniest life forms</h3>
             <h3>lie the greatest mysteries of existence...!</h3>
           </div>
+          <div id = "slogan2_container"  visibility="hidden">
+            <h3>small life, vast secrets within...!</h3>
+          </div>
+          <div id="slogan3_container" visibility="hidden">
+            <h3>micro life matters...!</h3>
+          </div>
+          <div id="head_user_controls">
+            <div id="select_lang_container">
+              <select id="languageSelector">
+                <option value="">Lang</option>
+                <option value="en">English</option>
+                <option value="ne">नेपाली (Nepali)</option>
+              </select>         
+            </div>
+            <button>Log in</button>
+            <button>sign up</button>
         </div>
       </div>
 
