added JS for language selection

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="ne">
-  <html lang="en"></html>
+  <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -59,19 +58,24 @@
             <div id="select_lang_container">
               <select id="languageSelector">
                 <option value="">Lang</option>
-                <option value="en">English</option>
-                <option value="ne">नेपाली (Nepali)</option>
+                <option value="ne">नेपाली</option>
               </select>         
             </div>
             <button>Log in</button>
             <button>sign up</button>
         </div>
       </div>
+      </div>
 
       <hr style="border: 2px solid grey; border-radius: 5px" />
 
       <!-- Main Content -->
       <div id="main_container">
+        <div id="test_container">
+          <h3 id="testing_language" style="visibility: hidden;"></h3>
+          <h3 id="english_test"></h3>
+        </div>
+        
         <div id="aboutMe_content"></div>
         <div id="image_container"></div>
       </div>
