fixed js for language toggle. added media query to remove header user controls below 860 px

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,44 +27,45 @@
     <section id="body_Container">
       <!-- Page Header -->
       <div id="header_container">
-        <video 
-        id="header_video" 
-        src="./assests/videos/virus_videos.mp4" 
-        autoplay 
-        muted 
-        loop 
-        playsinline
-      ></video>
+        <video
+          id="header_video"
+          src="./assests/videos/virus_videos.mp4"
+          autoplay
+          muted
+          loop
+          playsinline
+        ></video>
         <div id="header_contents">
           <div id="logo_container">
             <img
               src="./assests/images/logo.png"
               alt="Logo"
-              width="150" height="150"
+              width="150"
+              height="150"
             />
           </div>
-          
+
           <div id="slogan_container">
             <h3>In the tiniest life forms</h3>
             <h3>lie the greatest mysteries of existence...!</h3>
           </div>
-          <div id = "slogan2_container"  visibility="hidden">
+          <div id="slogan2_container" style="display: none">
             <h3>small life, vast secrets within...!</h3>
           </div>
-          <div id="slogan3_container" visibility="hidden">
+          <div id="slogan3_container" style="display: none">
             <h3>micro life matters...!</h3>
           </div>
           <div id="head_user_controls">
             <div id="select_lang_container">
               <select id="languageSelector">
-                <option value="">Lang</option>
+                <option value="en">Lang</option>
                 <option value="ne">नेपाली</option>
-              </select>         
+              </select>
             </div>
             <button>Log in</button>
             <button>sign up</button>
+          </div>
         </div>
-      </div>
       </div>
 
       <hr style="border: 2px solid grey; border-radius: 5px" />
@@ -72,10 +73,10 @@
       <!-- Main Content -->
       <div id="main_container">
         <div id="test_container">
-          <h3 id="testing_language" style="visibility: hidden;"></h3>
+          <h3 id="testing_language" style="display: none"></h3>
           <h3 id="english_test"></h3>
         </div>
-        
+
         <div id="aboutMe_content"></div>
         <div id="image_container"></div>
       </div>
